<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Skritter</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="invalidCredentials">Invalid username or password</string>
    <string name="login">Login</string>
    <string name="loggingIn">Logging in...</string>
    <string name="clearStrokes">Clear Strokes</string>
    <string name="home_welcome_message">Welcome, %1$s</string>
    <string name="study">Study</string>
    <string name="advancedStudy">Advanced Study</string>
    <string name="progress">Progress</string>
    <string name="lists">Lists</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="tapToShowDefinition">(tap to show definition)</string>
    <string name="tapToShowReading">(tap to show reading)</string>
    <string name="hideReading">Hide Reading</string>
    <string name="hideReadingSummary">Hides the reading of the word for definition, rune, and tone prompts</string>
    <string name="hideDefinition">Hide Definition</string>
    <string name="hideDefinitionSummary">Hides the definition of the word for reading, rune, and tone prompts</string>

</resources>
