<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <TextView android:id="@+id/skritterLabel" android:layout_width="match_parent" android:layout_height="100dp" android:text="@string/app_name" android:gravity="center_horizontal" android:textSize="60sp" android:layout_marginTop="60dp"/>
    <EditText android:id="@+id/username" android:inputType="text" android:layout_width="match_parent" android:layout_height="48dp" android:hint="@string/username"/>
    <EditText android:id="@+id/password" android:inputType="textPassword" android:layout_width="match_parent" android:layout_height="48dp" android:hint="@string/password"/>
    <Button android:id="@+id/loginButton" android:layout_width="match_parent" android:layout_height="60dp" android:text="@string/login" android:onClick="login" android:layout_marginTop="12dp"/>

</LinearLayout>
